update the landing page

--- a/index.html
+++ b/index.html
@@ -21,25 +21,27 @@
 	<div class="container bmd-layout-container bmd-drawer-f-b bmd-drawer-overlay">
 	
 	
-		<main class="container bmd-layout-content">
+		<main class="container bmd-layout-content index-main">
 		 
 
 			
-			<header class="index-header">
-				<div class="logo"><img src="./image/nhlbi-logo.png" class="logo-image" alt=""></div>
-				<h1 data-aos="fade-up" data-aos-duration="1000" >EXPLORE THE NHLBI</h1>
-				<p class="index-p" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="50">
-					Learn more about how we provide <br/>
-					global leadership in research,<br/>
-					 training, and education to <br/>
-					 prevent and treat heart, lung, <br/>
-					 blood, and sleep disorders.</p>
+			<header>
+				<div class="logo"><img src="./image/evergy.svg" class="logo-image" alt="Evergy Logo"></div>
+				<img src="./image/bg-logo.svg" class="bg-logo" alt="">
+				<div class="d-flex flex-column align-items-start justify-content-start index-content">
+				<h1 data-aos="fade-up" data-aos-duration="1000" >Explore Evergy energy <br/>saving techniques.</h1>
+				<p  class="pt-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="50">
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus.</p>
+				
 
-					 	<div class="CTA-container">
+					 	<div class="CTA-container pt-4">
 			<a href="top-resources.html" class="CTA" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="150">
 				
 				Top Resources</a>
 			</div>
+			</div>
+
+
 			</header>
 			
 		
@@ -60,9 +62,14 @@
 </body>
 
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" ></script>
 <script src="https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js" ></script>
-<link rel="stylesheet" href="js/custom.js">
+    <script src="./js/bootstrap.bundle.min.js"></script>
+    <script src="./js/gsap.min.js"></script>
+    <script src="./js/ScrollTrigger.min.js"></script>
+    <script src="./js/ScrollSmoother.min.js"></script>
+    <script src="./js/ScrollToPlugin.min.js"></script>
+    <script src="./js/SplitText.min.js"></script>
+    <script src="./js/custom.js"></script>
 
 <script>AOS.init();</script>
 </html>
